[gd_scene format=3 uid="uid://cs6gwkpepcuob"]

[ext_resource type="Script" uid="uid://c3odcaqys2r4j" path="res://src/ui/success-menu/success_menu.gd" id="1_rmubw"]

[node name="SuccessMenu" type="Control" unique_id=1250760166]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rmubw")

[node name="Panel" type="Panel" parent="." unique_id=2023927671]
custom_minimum_size = Vector2(200, 200)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -82.0
offset_top = -82.0
offset_right = 82.0
offset_bottom = 82.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel" unique_id=1240380511]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer" unique_id=1651297390]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer" unique_id=120625386]
layout_mode = 2
text = "SUCCESS!"
horizontal_alignment = 1

[node name="NextLevel" type="Button" parent="Panel/MarginContainer/VBoxContainer" unique_id=584611983]
layout_mode = 2
action_mode = 0
text = "Next Level"

[node name="Reload" type="Button" parent="Panel/MarginContainer/VBoxContainer" unique_id=81585399]
layout_mode = 2
action_mode = 0
text = "Try Again"

[node name="LevelSelection" type="Button" parent="Panel/MarginContainer/VBoxContainer" unique_id=2084389539]
layout_mode = 2
action_mode = 0
text = "Go to Level Selection"

[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/NextLevel" to="." method="_on_next_level_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/Reload" to="." method="_on_reload_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/LevelSelection" to="." method="_on_level_selection_pressed"]
